# rustokugui

./: Cargo.toml  README.md
src/: candidate.rs  controller.rs  data.rs  main.rs  selectors.rs  view.rs
