[package]
name = "rustoku_gui"
version = "0.1.0"
description = "A GUI application of the Rustoku library"
author = "Timothy Reed <thetimmyreed@gmail.com>"
edition = "2018"
readme = "README.md"
repository = "https://github.com/timlikestacos/sudokugui.git"
license = "Apache-2.0"
keywords = ["sudoku, rustoku, gui"]
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustoku = { git = "https://github.com/timlikestacos/rustoku.git"}

[dependencies.druid]
version = "0.7.0"
features = ["im"]